--- a/work_ryu.html
+++ b/work_ryu.html
@@ -23,6 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/Draggable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+    <!-- <script src="/Work_Ryu/js/work_ryu.js"></script> -->
 </head>
 
 <body>
@@ -38,38 +39,38 @@
                         <li class=""><a href="/intro_kim/intro.html">ABOUT</a>
                             <ul class="sub">
                                 <li><a href="/intro_kim/intro.html">About Us</a></li>
-                                <li><a href="#">Business Ethics</a></li>
-                                <li><a href="#">Partnerships</a></li>
-                                <li><a href="#">History</a></li>
-                                <li><a href="#">CEO Message</a></li>
-                                <li><a href="#">Contact & Location</a></li>
+                                <li><a href="index.html">Business Ethics</a></li>
+                                <li><a href="index.html">Partnerships</a></li>
+                                <li><a href="index.html">History</a></li>
+                                <li><a href="index.html">CEO Message</a></li>
+                                <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
                         <li><a href="/Listworks_lee.html">WORKS</a>
                             <ul class="sub">
-                                <li><a href="#">Production List</a></li>
+                                <li><a href="Listworks_lee.html">Production List</a></li>
                                 <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">NEWSROOM</a>
+                        <li><a href="index.html">NEWSROOM</a>
                             <ul class="sub">
-                                <li><a href="#">Notice</a></li>
-                                <li><a href="#">News</a></li>
+                                <li><a href="index.html">Notice</a></li>
+                                <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
                         <li><a href="/IR.html">IR</a>
                             <ul class="sub">
-                                <li><a href="#">IR Insights</a></li>
-                                <li><a href="#">Materials</a></li>
+                                <li><a href="IR.html">IR Insights</a></li>
+                                <li><a href="index.html">Materials</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">SUSTAINABILITY</a>
+                        <li><a href="index.html">SUSTAINABILITY</a>
                             <ul class="sub">
-                                <li><a href="#">Sustainability Story</a></li>
-                                <li><a href="#">Sustainability Activities</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
-                                <li><a href="#">ESG Ratings</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
+                                <li><a href="index.html">Sustainability Story</a></li>
+                                <li><a href="index.html">Sustainability Activities</a></li>
+                                <li><a href="index.html">Sustainability Report</a></li>
+                                <li><a href="index.html">ESG Ratings</a></li>
+                                <li><a href="index.html">Sustainability Report</a></li>
                             </ul>
                         </li>
                     </ul><!-- //.gnb -->
@@ -79,8 +80,11 @@
                             <a href="#" class="kr ">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                            <a href=""><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
+                        <div class="nav_ham">
+                            <img src="/asset/nav_ham.svg" alt="">
+                        </div><!-- //.nav_ham -->
                     </div><!-- //.right -->
                 </nav>
             </div><!-- //.inner -->
@@ -94,6 +98,75 @@
                 <li></li>
             </ul>
         </div>
+
+        <!-- 햄버거 메뉴 네비게이션 -->
+        <nav class="ham_nav">
+            <div class="menu_header">
+                <div class="language_switcher">
+                    <a href="#" class="lang_link active">EN</a>
+                    <a href="#" class="lang_link">KO</a>
+                </div>
+
+                <div class="menu_icons">
+                    <a href="#" class="icon_link">
+                        <img src="back/img/user.png" alt="Profile">
+                    </a>
+                    <button type="button" class="icon_link close_btn">
+                        <img src="/asset/x-circle.svg" alt="">
+                    </button>
+                </div>
+            </div>
+
+            <ul class="main_nav">
+                <li class="nav_item">
+                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <ul class="submenu">
+                        <li><a href="/intro_kim/intro.html">About Us</a></li>
+                        <li><a href="index.html">Business Ethics</a></li>
+                        <li><a href="index.html">Partnerships</a></li>
+                        <li><a href="index.html">History</a></li>
+                        <li><a href="index.html">CEO Message</a></li>
+                        <li><a href="index.html">Contact & Location</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="Listworks_lee.html" class="main_category">WORKS</a>
+                    <ul class="submenu">
+                        <li><a href="Listworks_lee.html">Production List</a></li>
+                        <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="index.html" class="main_category">NEWSROOM</a>
+                    <ul class="submenu">
+                        <li><a href="index.html">Notice</a></li>
+                        <li><a href="index.html">News</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="IR.html" class="main_category">IR</a>
+                    <ul class="submenu">
+                        <li><a href="IR.html">IR Insights</a></li>
+                        <li><a href="index.html">Materials</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="index.html" class="main_category">SUSTAINABILITY</a>
+                    <ul class="submenu">
+                        <li><a href="index.html">Sustainability Story</a></li>
+                        <li><a href="index.html">Sustainability Activities</a></li>
+                        <li><a href="index.html">Sustainability Report</a></li>
+                        <li><a href="index.html">ESG Ratings</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav><!-- //.ham_nav -->
+        <!-- 여기까지 헤더 -->
+
             <div class="inner">
                 <article class="main_visual">
                     <!-- Background Image with Gradients -->
@@ -553,8 +626,8 @@
                     <section class="behind_video">
                         <!-- Title Area -->
                         <div class="title_wrapper">
-                            <h2 class="section_title">Behind Video</h2>
-                            <button class="more_button">MORE</button>
+                            <h2 class="title">Behind Video</h2>
+                            <button class="more_btn">MORE</button>
                         </div><!-- .title_wrapper -->
 
                     <!-- Content Stack Area -->
