--- a/intro.html
+++ b/intro.html
@@ -30,12 +30,12 @@
 
 <body>
     <div class="wrap">
+        <div class="header_bg">
+        </div>
         <header class="">
-            <div class="header_bg">
-            </div>
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="/asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
-                <nav>
+                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <nav class="">
                     <ul class="gnb">
                         <li class=""><a href="#">ABOUT</a>
                             <ul class="sub">
@@ -77,11 +77,11 @@
                     </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang">
-                            <a href="#">EN</a>
-                            <a href="#">KR</a>
+                            <a href="#" class="en ">EN</a>
+                            <a href="#" class="kr ">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="/asset/user.png" alt="user"></a>
+                            <a href="#"><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="ham">
                             <ul>
