투표섹션 수정

--- a/viewersplayground_moon_backup.html
+++ b/viewersplayground_moon_backup.html
@@ -872,33 +872,32 @@
       <section class="vote">
         <div class="sect_inner">
           <div class="title">
-            <h2>vote</h2>
-            <h3>Who is the most anticipated villain?</h3>
+            <h2>Who is the most anticipated villain?</h2>
             <p>Vote for the character you believe will be the most captivatingly evil.</p>
           </div>
           <div class="vote-container">
-            <!-- Card 1: The Glory -->
+            <!-- Card 1: Vincenzo -->
             <div class="vote-card" id="vote-card-1">
               <div class="vote-card-inner">
                 <!-- Front of the card -->
                 <div class="vote-card-front">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
+                    <img src="./moon/asset/villain_vincenzo.png" alt="Jang Jun-woo from Vincenzo">
                   </div>
                   <div class="info-area">
-                    <span class="drama-title">The Glory</span>
-                    <h3 class="char-name">Park Yeon-jin</h3>
+                    <span class="drama-title">Vincenzo</span>
+                    <h3 class="char-name">Jang Jun-woo</h3>
                     <button type="button" class="vote-btn">Vote Now</button>
                   </div>
                 </div>
                 <!-- Back of the card -->
                 <div class="vote-card-back">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
+                    <img src="./moon/asset/villain_vincenzo.png" alt="Jang Jun-woo from Vincenzo">
                   </div>
                   <div class="info-area result-area">
-                    <span class="drama-title">The Glory</span>
-                    <h3 class="char-name">Park Yeon-jin</h3>
+                    <span class="drama-title">Vincenzo</span>
+                    <h3 class="char-name">Jang Jun-woo</h3>
                     <div class="vote-result">
                       <div class="progress-bar">
                         <div class="progress" style="width: 45%;"></div>
@@ -909,65 +908,33 @@
                 </div>
               </div>
             </div>
-            <!-- Card 2: Queen of Tears -->
+            <!-- Card 2: The Glory -->
             <div class="vote-card" id="vote-card-2">
               <div class="vote-card-inner">
                 <!-- Front of the card -->
                 <div class="vote-card-front">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
+                    <img src="./moon/asset/villain_theglory.png" alt="Park Yeon-jin from The Glory">
                   </div>
                   <div class="info-area">
-                    <span class="drama-title">Queen of Tears</span>
-                    <h3 class="char-name">Yoon Eun-seong</h3>
+                    <span class="drama-title">The Glory</span>
+                    <h3 class="char-name">Park Yeon-jin</h3>
                     <button type="button" class="vote-btn">Vote Now</button>
                   </div>
                 </div>
                 <!-- Back of the card -->
                 <div class="vote-card-back">
                   <div class="img-area">
-                    <img src="./moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
+                    <img src="./moon/asset/villain_theglory.png" alt="Park Yeon-jin from The Glory">
                   </div>
                   <div class="info-area result-area">
-                    <span class="drama-title">Queen of Tears</span>
-                    <h3 class="char-name">Yoon Eun-seong</h3>
+                    <span class="drama-title">The Glory</span>
+                    <h3 class="char-name">Park Yeon-jin</h3>
                     <div class="vote-result">
                       <div class="progress-bar">
-                        <div class="progress" style="width: 35%;"></div>
+                        <div class="progress" style="width: 55%;"></div>
                       </div>
-                      <span class="percentage">35%</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Card 3: Bon Appétit, Your Majesty -->
-            <div class="vote-card" id="vote-card-3">
-              <div class="vote-card-inner">
-                <!-- Front of the card -->
-                <div class="vote-card-front">
-                  <div class="img-area">
-                    <img src="./moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
-                  </div>
-                  <div class="info-area">
-                    <span class="drama-title">Bon Appétit, Your Majesty</span>
-                    <h3 class="char-name">Jesan Daegun</h3>
-                    <button type="button" class="vote-btn">Vote Now</button>
-                  </div>
-                </div>
-                <!-- Back of the card -->
-                <div class="vote-card-back">
-                  <div class="img-area">
-                    <img src="./moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
-                  </div>
-                  <div class="info-area result-area">
-                    <span class="drama-title">Bon Appétit, Your Majesty</span>
-                    <h3 class="char-name">Jesan Daegun</h3>
-                    <div class="vote-result">
-                      <div class="progress-bar">
-                        <div class="progress" style="width: 20%;"></div>
-                      </div>
-                      <span class="percentage">20%</span>
+                      <span class="percentage">55%</span>
                     </div>
                   </div>
                 </div>
@@ -975,8 +942,8 @@
             </div>
           </div>
           <div class="vote-footer-message">
-            <p>Thank you for voting. Share your thoughts in the comments!</p>
-            <button type="button" class="vote-again-btn">Vote Again</button>
+            <p>Thank you for voting.</p>
+            <p>Share your thoughts in the comments!</p>
           </div>
         </div>
       </section>
