--- a/main_beck.html
+++ b/main_beck.html
@@ -76,7 +76,7 @@
                     </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang active">
-                            <a href="#" class="en ">EN</a>
+                            <a href="#" class="en active">EN</a>
                             <a href="#" class="kr ">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
