--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Studio Dragon">
     <meta property="og:description" content="Studio Dragon, a premium storyteller group">
-    <meta property="og:image" content="asset/og_img.png">
+    <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
     <meta property="og:url" content="https://studiodragon.netlify.app/">
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
