--- a/work_ryu.html
+++ b/work_ryu.html
@@ -3,10 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
-    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
-    <meta name="author" content="이지조">
+    <meta name="description" content="We Are Studio Dragon">
+    <meta name="keywords" content="Studio Dragon, a premium storyteller group">
+    <meta name="author" content="Team 2eezy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Studio Dragon">
+    <meta property="og:description" content="Studio Dragon, a premium storyteller group">
+    <meta property="og:image" content="	https://studiodragon.netlify.app/asset/og_img.png">
+    <meta property="og:url" content="https://studiodragon.netlify.app/">
     <title>studiodragon</title>
     <link rel="shortcut icon" href="/back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"><!-- aos -->
