--- a/IR.html
+++ b/IR.html
@@ -3,91 +3,177 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
-    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
-    <meta name="author" content="100SJ">
+    <meta name="description" content="We Are Studio Dragon">
+    <meta name="keywords" content="Studio Dragon, a premium storyteller group">
+    <meta name="author" content="Team 2eezy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Studio Dragon">
+    <meta property="og:description" content="Studio Dragon, a premium storyteller group">
+    <meta property="og:image" content="https://studiodragon.netlify.app/asset/og_img.png">
+    <meta property="og:url" content="https://studiodragon.netlify.app/">
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="IR_Kwon/css/main_style.css">
     <link rel="stylesheet" href="IR_Kwon/css/main_media.css">
+    <link rel="stylesheet" href="css/main_media.css">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <!-- <script src="js/common_moon.js"></script> -->
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script> -->
+    <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+    <!-- <script src="js/common_moon.js"></script> -->
+    <script src="js/common.js"></script>
     <script src="IR_Kwon/js/main.js"></script>
 </head>
 
 <body>
     <div class="wrap">
-              <div class="header_bg">
+       <!-- 헤더 시작 -->
+        <div class="header_bg">
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="/index.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="/companyintroduction_kim.html">ABOUT</a>
+                        <li class=""><a href="/intro.html">ABOUT</a>
                             <ul class="sub">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Business Ethics</a></li>
-                                <li><a href="#">Partnerships</a></li>
-                                <li><a href="#">History</a></li>
-                                <li><a href="#">CEO Message</a></li>
-                                <li><a href="#">Contact & Location</a></li>
+                                <li><a href="/intro.html">About Us</a></li>
+                                <li><a href="index.html">Business Ethics</a></li>
+                                <li><a href="index.html">Partnerships</a></li>
+                                <li><a href="index.html">History</a></li>
+                                <li><a href="index.html">CEO Message</a></li>
+                                <li><a href="index.html">Contact & Location</a></li>
                             </ul>
                         </li>
                         <li><a href="/Listworks_lee.html">WORKS</a>
                             <ul class="sub">
-                                <li><a href="#">Production List</a></li>
+                                <li><a href="Listworks_lee.html">Production List</a></li>
                                 <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">NEWSROOM</a>
+                        <li><a href="index.html">NEWSROOM</a>
                             <ul class="sub">
-                                <li><a href="#">Notice</a></li>
-                                <li><a href="#">News</a></li>
+                                <li><a href="index.html">Notice</a></li>
+                                <li><a href="index.html">News</a></li>
                             </ul>
                         </li>
                         <li><a href="/IR.html">IR</a>
                             <ul class="sub">
-                                <li><a href="#">IR Insights</a></li>
-                                <li><a href="#">Materials</a></li>
+                                <li><a href="IR.html">IR Insights</a></li>
+                                <li><a href="index.html">Materials</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">SUSTAINABILITY</a>
+                        <li><a href="index.html">SUSTAINABILITY</a>
                             <ul class="sub">
-                                <li><a href="#">Sustainability Story</a></li>
-                                <li><a href="#">Sustainability Activities</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
-                                <li><a href="#">ESG Ratings</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
+                                <li><a href="index.html">Sustainability Story</a></li>
+                                <li><a href="index.html">Sustainability Activities</a></li>
+                                <li><a href="index.html">Sustainability Report</a></li>
+                                <li><a href="index.html">ESG Ratings</a></li>
+                                <li><a href="index.html">Sustainability Report</a></li>
                             </ul>
                         </li>
                     </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang">
-                            <a href="#" class="en ">EN</a>
+                            <a href="#" class="en active">EN</a>
                             <a href="#" class="kr ">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                            <a href=""><img src="back/img/user.png" alt="user"></a>
                         </div><!-- //.user -->
-                        <div class="ham">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </div>
+                        <div class="nav_ham">
+                            <img src="/asset/nav_ham.svg" alt="">
+                        </div><!-- //.nav_ham -->
                     </div><!-- //.right -->
                 </nav>
             </div><!-- //.inner -->
         </header>
+
+        <!-- 햄버거 메뉴 독립 배치 -->
+        <div class="ham">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+
+        <!-- 햄버거 메뉴 네비게이션 -->
+        <nav class="ham_nav">
+            <div class="menu_header">
+                <div class="language_switcher">
+                    <a href="#" class="lang_link active">EN</a>
+                    <a href="#" class="lang_link">KO</a>
+                </div>
+
+                <div class="menu_icons">
+                    <a href="#" class="icon_link">
+                        <img src="back/img/user.png" alt="Profile">
+                    </a>
+                    <button type="button" class="icon_link close_btn">
+                        <img src="/asset/x-circle.svg" alt="">
+                    </button>
+                </div>
+            </div>
+
+            <ul class="main_nav">
+                <li class="nav_item">
+                    <a href="/intro_kim/intro.html" class="main_category">ABOUT</a>
+                    <ul class="submenu">
+                        <li><a href="/intro_kim/intro.html">About Us</a></li>
+                        <li><a href="index.html">Business Ethics</a></li>
+                        <li><a href="index.html">Partnerships</a></li>
+                        <li><a href="index.html">History</a></li>
+                        <li><a href="index.html">CEO Message</a></li>
+                        <li><a href="index.html">Contact & Location</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="Listworks_lee.html" class="main_category">WORKS</a>
+                    <ul class="submenu">
+                        <li><a href="Listworks_lee.html">Production List</a></li>
+                        <li><a href="viewersplayground_moon.html">Viewer Participation</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="index.html" class="main_category">NEWSROOM</a>
+                    <ul class="submenu">
+                        <li><a href="index.html">Notice</a></li>
+                        <li><a href="index.html">News</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="IR.html" class="main_category">IR</a>
+                    <ul class="submenu">
+                        <li><a href="IR.html">IR Insights</a></li>
+                        <li><a href="index.html">Materials</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav_item">
+                    <a href="index.html" class="main_category">SUSTAINABILITY</a>
+                    <ul class="submenu">
+                        <li><a href="index.html">Sustainability Story</a></li>
+                        <li><a href="index.html">Sustainability Activities</a></li>
+                        <li><a href="index.html">Sustainability Report</a></li>
+                        <li><a href="index.html">ESG Ratings</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav><!-- //.ham_nav -->
+        <!-- 여기까지 헤더 -->
 <div class="main">
   <!-- Banner Section -->
 <section class="banner">
@@ -433,9 +519,9 @@
   </section><!-- //.risks_mitigation -->
   <!-- CTA Section -->
   <section class="cta">
-    <a href="#" class="button">Investor Deck</a>
-    <a href="#" class="button">Data CSV</a>
-    <a href="#" class="button primary">Request a Meeting</a>
+    <button type="button" class="button">Investor Deck</button>
+    <button type="button" class="button">Data CSV</button>
+    <button type="button" class="button primary">Request a Meeting</button>
   </section><!-- //.cta -->
 </div>
         <footer class="ver_dark ver_white">
