--- a/viewersplayground_moon.html
+++ b/viewersplayground_moon.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main_media.css">
   <link rel="stylesheet" href="./moon/css/pg-style.css">
+  <link rel="stylesheet" href="./moon/css/pg-media.css">
   <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
@@ -95,9 +96,9 @@
     <!-- 메인 -->
     <main>
       <!-- 히어로 섹션 -->
-      <section class="hero">
+      <section class="hero text_reveal_section">
         <div class="sect_inner">
-          <ul class="opacity_reveal">
+          <ul class="hero-txtbox opacity_reveal">
             <li>Create,</li>
             <li>Share,</li>
             <li>Vote,</li>
@@ -112,7 +113,7 @@
 
       <!-- 공모전 수상작 -->
       <section class="contest-winner">
-        <div class="inner">
+        <div class="sect_inner">
           <div class="top">
             <div class="decoImg"></div>
             <div class="title">
@@ -242,7 +243,7 @@
               </div><!-- video-wrap -->
             </div><!-- video-content -->
           </div><!-- .wrap -->
-        </div>
+        </div><!-- .sect_inner -->
       </section><!-- .contest-winner -->
 
       <!-- 진행중인 공모전 -->
@@ -1024,6 +1025,112 @@
         </div><!-- ./sect_inner -->
       </section><!-- .community -->
 
+      <!-- 투표 섹션 -->
+      <section class="vote">
+        <div class="sect_inner">
+          <div class="title">
+            <h2>vote</h2>
+            <h3>Who is the most anticipated villain?</h3>
+            <p>Vote for the character you believe will be the most captivatingly evil.</p>
+          </div>
+          <div class="vote-container">
+            <!-- Card 1: The Glory -->
+            <div class="vote-card" id="vote-card-1">
+              <div class="vote-card-inner">
+                <!-- Front of the card -->
+                <div class="vote-card-front">
+                  <div class="img-area">
+                    <img src="./moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
+                  </div>
+                  <div class="info-area">
+                    <span class="drama-title">The Glory</span>
+                    <h3 class="char-name">Park Yeon-jin</h3>
+                    <button type="button" class="vote-btn">Vote Now</button>
+                  </div>
+                </div>
+                <!-- Back of the card -->
+                <div class="vote-card-back">
+                  <div class="img-area">
+                    <img src="./moon/asset/vote_yeonjin.jpg" alt="Park Yeon-jin from The Glory">
+                  </div>
+                  <div class="info-area result-area">
+                    <span class="drama-title">The Glory</span>
+                    <h3 class="char-name">Park Yeon-jin</h3>
+                    <div class="vote-result">
+                      <progress class="progress progress01" value="0" min="0" max="100"></progress>
+                      <span class="percentage">45%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2: Queen of Tears -->
+            <div class="vote-card" id="vote-card-2">
+              <div class="vote-card-inner">
+                <!-- Front of the card -->
+                <div class="vote-card-front">
+                  <div class="img-area">
+                    <img src="./moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
+                  </div>
+                  <div class="info-area">
+                    <span class="drama-title">Queen of Tears</span>
+                    <h3 class="char-name">Yoon Eun-seong</h3>
+                    <button type="button" class="vote-btn">Vote Now</button>
+                  </div>
+                </div>
+                <!-- Back of the card -->
+                <div class="vote-card-back">
+                  <div class="img-area">
+                    <img src="./moon/asset/vote_yooneunseong.jpg" alt="Yoon Eun-seong from Queen of Tears">
+                  </div>
+                  <div class="info-area result-area">
+                    <span class="drama-title">Queen of Tears</span>
+                    <h3 class="char-name">Yoon Eun-seong</h3>
+                    <div class="vote-result">
+                      <progress class="progress progress02" value="0" min="0" max="100"></progress>
+                      <span class="percentage">35%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3: Bon Appétit, Your Majesty -->
+            <div class="vote-card" id="vote-card-3">
+              <div class="vote-card-inner">
+                <!-- Front of the card -->
+                <div class="vote-card-front">
+                  <div class="img-area">
+                    <img src="./moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
+                  </div>
+                  <div class="info-area">
+                    <span class="drama-title">Bon Appétit, Your Majesty</span>
+                    <h3 class="char-name">Jesan Daegun</h3>
+                    <button type="button" class="vote-btn">Vote Now</button>
+                  </div>
+                </div>
+                <!-- Back of the card -->
+                <div class="vote-card-back">
+                  <div class="img-area">
+                    <img src="./moon/asset/vote_jesan.jpg" alt="Jesan Daegun from Bon Appétit, Your Majesty">
+                  </div>
+                  <div class="info-area result-area">
+                    <span class="drama-title">Bon Appétit, Your Majesty</span>
+                    <h3 class="char-name">Jesan Daegun</h3>
+                    <div class="vote-result">
+                      <progress class="progress progress03" value="0" min="0" max="100"></progress>
+                      <span class="percentage">20%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="vote-footer-message">
+            <p>Thank you for voting. Share your thoughts in the comments!</p>
+            <button type="button" class="vote-again-btn">Vote Again<i class="fa-solid fa-arrow-rotate-right"></i></button>
+          </div>
+        </div>
+      </section><!-- //.vote-section -->
     </main>
 
 
