common.js head 연결 commit

--- a/intro.html
+++ b/intro.html
@@ -24,6 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/Draggable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="js/common.js"></script>
     <script src="/back/js/MainBack.js"></script>
     <script src="/intro_kim/js/introkim.js"></script>
 </head>
@@ -168,7 +169,7 @@
             </ul>
         </nav><!-- //.ham_nav -->
         <!-- 여기까지 헤더 -->
-        </header>
+
         <main>
             <section class="main_cach">
                 <div class="swiper">
